show comment functionality on all articles

--- a/flannery-nc-news-react/src/App.css
+++ b/flannery-nc-news-react/src/App.css
@@ -28,7 +28,16 @@
   list-style-type: none;
 }
 
+.commentList {
+  background-color: lightsteelblue;
+  list-style-type: none;
+}
+
 .article {
+  background-color: lightyellow;
+}
+
+.comment {
   background-color: lightyellow;
 }
 
