--- a/flannery-nc-news-react/src/App.css
+++ b/flannery-nc-news-react/src/App.css
@@ -4,21 +4,55 @@
 }
 
 .app-header {
-  background-color: lightblue;
+  background-color: #202829;
+  color: white;
+  padding: 15px;
+}
+
+.redSyntax {
+  color: #ba1f31 !important;
 }
 
 .navBar {
-  background-color: lightcoral;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-decoration: none;
+  color: antiquewhite;
+  padding: 15px;
+  background-color: #ba1f31;
 }
 
-.link:link {
-  color: purple;
+.topicBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-decoration: none;
+  color: antiquewhite;
+  padding: 15px;
+  background-color: #202829;
+}
+
+.link {
+  color: rgb(255, 255, 255);
   text-decoration: none;
   font-weight: bold;
 }
 
 .link:visited {
-  color: purple;
+  color: rgb(233, 233, 233);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.articleLink {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.articleLink:visited {
+  color: #202829;
   text-decoration: none;
   font-weight: bold;
 }
@@ -26,6 +60,8 @@
 .articleList {
   background-color: lightsteelblue;
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .commentList {
