--- a/flannery-nc-news-react/src/App.css
+++ b/flannery-nc-news-react/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: rgb(228, 189, 189);
 }
 
 /* .main {
@@ -72,16 +73,15 @@
 }
 
 .articleList {
-  background-color: lightsteelblue;
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
 .commentList {
-  background-color: lightsteelblue;
   list-style-type: none;
   margin: 0;
+  padding: 0;
 }
 
 .idP {
@@ -102,20 +102,33 @@
 
 .article {
   background-color: lightyellow;
+  border: 2px solid #202829;
+  margin: 10px;
+  padding: 5px;
 }
 
 .comment {
   background-color: lightyellow;
+  border: 2px solid #202829;
+  margin: 10px;
+  padding: 5px;
 }
 
 button {
   background-color: #202829;
+  font-weight: bold;
   color: white;
-  border: 2px solid #ba1f31;
+  border: 2px solid #202829;
+  margin: 2px;
 }
 
 button:hover {
-  background-color: #ba1f31;
+  background-color: #b93c4b;
   color: white;
   border: 2px solid #202829;
+}
+
+.voteBut {
+  border-radius: 60%;
+  /* font-size: large; */
 }
