--- a/flannery-nc-news-react/src/App.css
+++ b/flannery-nc-news-react/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: rgb(228, 189, 189);
+  background-color: #fcb9b2;
   min-width: 380px;
 }
 
@@ -8,6 +8,7 @@
   background-color: #202829;
   color: white;
   padding: 15px;
+  width: auto;
 }
 
 .redSyntax {
@@ -22,6 +23,7 @@
   color: antiquewhite;
   padding: 15px;
   background-color: #ba1f31;
+  width: auto;
 }
 
 .topicBar {
@@ -106,13 +108,14 @@
 
 .bodyP {
   font-style: italic;
+  text-align: justify;
 }
 
 /* --------------------------------- */
 
 .articleComment {
   background-color: rgb(252, 252, 252);
-  border: 2px solid #202829;
+  border-top: 5px solid #ba1f31;
   margin: 10px;
   padding: 5px;
 }
