--- a/flannery-nc-news-react/src/index.css
+++ b/flannery-nc-news-react/src/index.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   font-family: "Raleway", sans-serif;
   height: 100%;
-  background-color: rgb(228, 189, 189);
+  background-color: #fcb9b2;
 }
 
 code {
