--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,12 @@ h5 {
   font-weight: bold;
 }
 
+.link:focus {
+  color: rgb(104, 212, 54);
+  text-decoration: none;
+  font-weight: bold;
+}
+
 .headingUserLink {
   font-size: 2vw;
 }
@@ -158,7 +164,19 @@ button:hover {
   border: 2px solid #202829;
 }
 
+button:focus {
+  background-color: #9eb93c;
+  color: white;
+  border: 2px solid #202829;
+}
+
 .voteBut {
+  border-radius: 50%;
+  background-color: #fcb9b2;
+  color: black;
+}
+
+.voteBut:focus {
   border-radius: 50%;
   background-color: #fcb9b2;
   color: black;
